FrontRowCMS/FrontRowCMS/wwwroot/css/site.css
/* ... */
.mont_light_18_darkgray {
    font-family: "montserrat-light";
    font-size: 18px;
    line-height: 29px;
    color: #474747;
}

.quick_bold_18_darkgray {
    font-family: "quicksand-bold";
    font-size: 18px;
    line-height: 21px;
    color: #474747;
}

.mont_regular_18_darkgreen {
    font-family: "montserrat-regular";
    font-size: 18px;
    line-height: 21px;
    color: #83a44a;
}

.mont_regular_18_darkgray {
    font-family: "montserrat-regular";
    font-size: 18px;
    line-height: 21px;
    color: #474747;
}

.quick_bold_18_white {
    font-family: "quicksand-bold";
    font-size: 18px;
    line-height: 21px;
    color: #ffffff;
}

.mont_regular_18_white {
    font-family: "montserrat-regular";
    font-size: 18px;
    line-height: 21px;
    color: #ffffff;
}

.mont_regular_16_lightgray {
    font-family: "montserrat-regular";
    font-size: 16px;
    line-height: 22px;
    color: #b9b9b9;
}

.mont_light_14_white {
    font-family: "montserrat-light";
    font-size: 14px;
    line-height: 29px;
    color: #ffffff;
}

.mont_light_14_white_2 {
    font-family: "montserrat-light";
    font-size: 14px;
    line-height: 19px;
    color: #ffffff;
}

/***************************************************************

                   Overall Site CSS

****************************************************************/

/*
body {
    width: 100%;
    background-color: rgba(76, 95, 111, 0.15);
    overflow-x: hidden;
    min-width: 500px;
}
*/


h1 {
    margin: 0;
    font-size: 214px;
    line-height: 244px;
}

h2 {
    font-size: 87px;
    line-height: 92px;
}

h3 {
    font-size: 64px;
    line-height: 78px;
    font-family: montserrat-semibold;
}

h4 {
    font-size: 48px;
    line-height: 56px;
}

h6 {
    margin: 0;
    font-size: 38px;
    line-height: 44px;
}

h1, h2, h4, h6 {
    font-family: quicksand-bold;
}

/*
.row {
    margin: 0;
}
    */

.container-fluid {
    margin:auto;
    padding: 0px;
}


.navbar {
    min-height: 103px;
    background-color: #ffffff;
    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.27);
    margin-bottom: 0;
    border: 0;
}


.navbar-brand {
    padding: 0;
    min-height: 103px;
}

.navbar-header {
    margin-left: 18px !important;
    margin-top: 10px !important;
    margin-bottom: 9px !important;
}

/* Removed from current implementation
.current {
    background-color: #9ec54d !important;
    color: #FFF !important;
    font-size: 18px;
    line-height: 21px;
    font-family: montserrat-regular;
    border-radius: 5px 5px 0 0;
}
*/

.navbar-default .navbar-nav > li > a {
    padding: 12px 28px 42px 28px;
    margin-top: 48px;
    color: #474747;
    font-size: 18px;
    line-height: 21px;
    font-family: montserrat-regular;
}

.dropdown-menu > li > a {
    color: #474747;
    font-size: 18px;
    line-height: 21px;
    font-family: montserrat-regular;
}

    .navbar-default .navbar-nav > li > a:hover,
    .dropdown-menu > li > a:hover {
        color: #83a44a;
        background-color: #FFF;
    }

.navbar .navbar-right > li:last-child {
	width: 159px;
	background-color: #1c5788;
}

    .navbar .navbar-right > li:last-child a {
        color: #FFF !important;
        padding-left: 47px !important;
    }

		.navbar .navbar-right > li:last-child a:hover {
			color: #83a44a !important;
			background-color: #1c5788;
		}


.nav.navbar-nav.navbar-right {
    margin: 0;
    padding-bottom: 0;
}

.dropdown-toggle {
    height: 74px;
}

    .dropdown-toggle.active {
        background-color: #9ec54d;
    }

.dropdown-menu > li > a {
    font-size: 18px;
}


    .dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
        color: #9ec54d;
        background-color: white;
    }


.navbar-default .navbar-toggle {
    height: 63px;
    width: 63px;
    margin-top: 23px;
    margin-right: 30px;
    background-color: #9ec54d;
    box-shadow: 5px 5px 8px -2px #4A4A4A;
}

    .navbar-default .navbar-toggle .icon-bar {
        background-color: #345400;
        margin-left: 10px;
    }

    .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
        background-color: #6e8d45;
    }



footer {
    min-height: 200px;
    width: 100%;
    background-image: linear-gradient(261deg, #b2da55, #678a2a);
    text-align:center;
}

    footer p {
        padding: 0;
    }

.footer-section {
    padding:20px;
}

    .footer-section p {
        margin: 0;
        padding: 0;
    }

.footer-home {
    width: 130px;
    height: 111px;
    margin: 5px;
}

.social-media img {
    margin-top: 8px;
    margin-right: 17.6px;
}

.copyright {
    bottom: 0;
    width: 100%;
    text-align: center;
}


/***************************************************************

                   Home Page CSS

****************************************************************/


#header {
    background-color: #9ec54d;
    padding-top: 30px;
    padding-bottom: 29px;
}

.main-header {
    background-image: url("../images/home_header.png");
    background-size: cover;
    min-height: 509px;
    background-repeat: no-repeat;
}

.header-img-textbox {
    margin-top: 43px;
    margin-left: 552px;
    position: absolute;
}

.header-text-greeting {
    font-family: quicksand-bold;
    font-size: 214px;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    line-height: 1.06;
    letter-spacing: -6px;
    margin-top: 43px;
    margin-left: -35px;
    color: #FFF;
}

.sub-text-box {
    background-color: #FFF;
    min-height: 104px;
    max-width: 591px;
    padding: 7px 66px 11px 1px;
}

    .sub-text-box > .sub-text {
        font-family: quicksand-bold;
        font-size: 38px;
        letter-spacing: -2px;
        color: #474747;
        line-height: 43px;
    }

.header-box {
    margin-left: 550px;
}



.have-questions-heading {
    margin-right: 48px;
}

.green-header {
    margin-left: 80px;
}





.services {
    padding: 75px 0 72px 0;
    background-color: #FFF;
}
/* ... */

